searching ({pull}30338[#30338])

[float]
=== Regressions
Fail snapshot operations early when creating or deleting a snapshot on a repository that has been
written to by an older Elasticsearch after writing to it with a newer Elasticsearch version. ({pull}30140[#30140])

Fix NPE when CumulativeSum agg encounters null value/empty bucket ({pull}29641[#29641])

//[float]
//=== Regressions

//[float]
//=== Known Issues

[[release-notes-6.4.0]]
== {es} 6.4.0

coming[6.4.0]

//[float]
[[breaking-6.4.0]]
//=== Breaking Changes

//[float]
//=== Breaking Java Changes

//[float]
//=== Deprecations

[float]
=== New Features

The new <<mapping-ignored-field,`_ignored`>> field allows to know which fields
got ignored at index time because of the <<ignore-malformed,`ignore_malformed`>>
option. ({pull}30140[#29658])

A new analysis plugin called `analysis_nori` that exposes the Lucene Korean
analysis module.  ({pull}30397[#30397])

[float]
=== Enhancements

{ref-64}/breaking_64_api_changes.html#copy-source-settings-on-resize[Allow copying source settings on index resize operations] ({pull}30255[#30255])

Added new "Request" object flavored request methods. Prefer these instead of the
multi-argument versions. ({pull}29623[#29623])

The cluster state listener to decide if watcher should be
stopped/started/paused now runs far less code in an executor but is more
synchronous and predictable. Also the trigger engine thread is only started on
data nodes. And the Execute Watch API can be triggered regardless is watcher is
started or stopped. ({pull}30118[#30118])

Added put index template API to the high level rest client ({pull}30400[#30400])

[float]
=== Bug Fixes

Do not ignore request analysis/similarity settings on index resize operations when the source index already contains such settings ({pull}30216[#30216])

Fix NPE when CumulativeSum agg encounters null value/empty bucket ({pull}29641[#29641])

Machine Learning::
